[gd_scene load_steps=10 format=3 uid="uid://by3x25yrf5o25"]

[ext_resource type="Script" path="res://popochiu/Interface/interface.gd" id="1_aj6ag"]
[ext_resource type="FontFile" uid="uid://dixh1egf7k2fb" path="res://addons/popochiu/fonts/monkeyisland_1991.ttf" id="1_h4xvr"]
[ext_resource type="Theme" uid="uid://1mmbq7vss6vw" path="res://Fonts/interface.tres" id="2_sho0e"]
[ext_resource type="PackedScene" uid="uid://dhsfl8ot4j5fj" path="res://addons/popochiu/engine/objects/graphic_interface/dialog_menu/dialog_menu.tscn" id="3_424gq"]
[ext_resource type="PackedScene" uid="uid://l66d1cmmsenj" path="res://popochiu/characters/human/character_human.tscn" id="4_v0g6j"]
[ext_resource type="Texture2D" uid="uid://hj148s7ppsw5" path="res://popochiu/rooms/room_lab/sombra.png" id="4_w1qpd"]
[ext_resource type="Texture2D" uid="uid://d31k5vacv830r" path="res://popochiu/Interface/progreso_1.png" id="6_7u2s0"]
[ext_resource type="Texture2D" uid="uid://bfp5oksqc428b" path="res://popochiu/Interface/progreso_2.png" id="7_6tedu"]

[sub_resource type="Theme" id="Theme_ax1qe"]
default_font = ExtResource("1_h4xvr")
default_font_size = 150

[node name="Interface" type="CanvasLayer"]
script = ExtResource("1_aj6ag")

[node name="Scores" type="CanvasLayer" parent="."]
visible = false

[node name="Gain" type="HBoxContainer" parent="Scores"]
offset_left = 312.0
offset_right = 759.0
offset_bottom = 40.0
theme = ExtResource("2_sho0e")
alignment = 1

[node name="Reward" type="Label" parent="Scores/Gain"]
layout_mode = 2
text = "Rewad"

[node name="R_value" type="Label" parent="Scores/Gain"]
layout_mode = 2
text = "000"

[node name="Reward2" type="Label" parent="Scores/Gain"]
layout_mode = 2
text = "Castigo"

[node name="R_value2" type="Label" parent="Scores/Gain"]
layout_mode = 2
text = "000"

[node name="Dialogs" type="CanvasLayer" parent="."]

[node name="Dialog_room" type="Control" parent="Dialogs"]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 1152.0

[node name="bg" type="ColorRect" parent="Dialogs/Dialog_room"]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 1153.0

[node name="CharacterHuman" parent="Dialogs/Dialog_room" instance=ExtResource("4_v0g6j")]
position = Vector2(821, 695)
scale = Vector2(2, 2)

[node name="CharacterHuman2" parent="Dialogs/Dialog_room" instance=ExtResource("4_v0g6j")]
position = Vector2(368, 699)
scale = Vector2(-2, 2)

[node name="shadow" type="TextureRect" parent="Dialogs/Dialog_room"]
layout_mode = 0
offset_left = 253.0
offset_top = 625.0
offset_right = 453.0
offset_bottom = 725.0
texture = ExtResource("4_w1qpd")

[node name="shadow2" type="TextureRect" parent="Dialogs/Dialog_room"]
layout_mode = 0
offset_left = 720.0
offset_top = 622.0
offset_right = 920.0
offset_bottom = 722.0
texture = ExtResource("4_w1qpd")

[node name="Dialog_title" type="Label" parent="Dialogs"]
offset_top = 1111.0
offset_right = 1153.0
offset_bottom = 1152.0
theme = ExtResource("2_sho0e")
horizontal_alignment = 1

[node name="DialogMenu" parent="Dialogs" instance=ExtResource("3_424gq")]

[node name="RtlDialog" type="RichTextLabel" parent="Dialogs"]
offset_left = 211.0
offset_top = 912.0
offset_right = 916.0
offset_bottom = 1000.0
mouse_filter = 2
theme = ExtResource("2_sho0e")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
fit_content = true

[node name="RtlNarrador" type="RichTextLabel" parent="Dialogs"]
offset_left = 258.0
offset_top = 1063.0
offset_right = 901.0
offset_bottom = 1119.0
mouse_filter = 2
theme = ExtResource("2_sho0e")
theme_override_colors/default_color = Color(0.027451, 0.027451, 0.027451, 1)
bbcode_enabled = true
fit_content = true

[node name="BtnContinue" type="TextureButton" parent="Dialogs"]
offset_right = 1151.0
offset_bottom = 1152.0
focus_mode = 0

[node name="Timer" type="TextureProgressBar" parent="Dialogs"]
offset_left = 302.0
offset_top = 1065.0
offset_right = 850.0
offset_bottom = 1115.0
mouse_filter = 2
value = 100.0
texture_under = ExtResource("6_7u2s0")
texture_progress = ExtResource("7_6tedu")

[node name="Intro" type="CanvasLayer" parent="."]

[node name="start" type="Button" parent="Intro"]
offset_left = 235.0
offset_top = 424.0
offset_right = 891.0
offset_bottom = 749.0
focus_mode = 0
theme = SubResource("Theme_ax1qe")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0.792157, 0, 0.619608, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "EMPEZAR"
flat = true
